--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,28 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Meta -->
   <meta charset="utf-8">
-  <title>AngularMiniEcommerce</title>
+  <title>MiniStore</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="description" content="Mini E-Commerce website built using Angular for portfolio demonstration.">
+  <meta name="author" content="Your Name">
+
+  <!-- Updated Comic Neue Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap"
+    rel="stylesheet"
+  >
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
+  <!-- Angular App Root -->
   <app-root></app-root>
 </body>
 </html>
